# unity-explorer

./: .cursorrules  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CODEOWNERS  GEMINI.md  Makefile  README.md  particle-system-implementation-workflow.md  pr-description.md
.aiassistant/rules/: project-rules.md
.claude/: debug-dcl.md  settings.json
.claude/agents/: automation-tester.md
.claude/commands/: README.md  debug-dcl-adjacent.md  debug-dcl-asset.md  debug-dcl-async.md  debug-dcl-behavior.md  debug-dcl-context.md  debug-dcl-ecs.md  debug-dcl-exception.md  debug-dcl-lifecycle.md  debug-dcl-logic.md  debug-dcl-performance.md  debug-dcl-plugin.md  debug-dcl-related.md  debug-dcl.md
.github/: PULL_REQUEST_TEMPLATE.md  auto_assign_config.yml  auto_assign_config_dev.yml  auto_assign_config_qa.yml
.github/ISSUE_TEMPLATE/: bug_report.md  tech-debt.md  technical_debt.md
.github/prompts/: dependency-security-review.md  review-instructions.md
.github/scripts/: report-review-cost.js
.github/workflows/: activation.yml  auto-assign.yml  auto-label-issues.yml  auto-sync-main-to-dev.yml  build-Mac-il2cpp.yml  build-Windows-il2cpp.yml  build-game-ci-image.yml  build-il2cpp.yml  build-profile-nightly.yml  build-release-main-page.yml  build-release-main.yml  build-release-weekly.yml  build-unitycloud.yml  build.yml  cancel-previous-run.yml  claude-pr-review-auto.yml  claude-pr-review-require.yml  claude-pr-review.yml  claude-re-review.yml  close-inactive-issues.yml  comment-artifact-in-pr.yml  create-page-release-weekly.yml  create-release-branch.yml  dependency-security-review.yml  main.yml  (+21 more)
Explorer/: .editorconfig  .gitattributes  .gitignore  ApplicationGuards.csproj.DotSettings  AssetsProvision.csproj.DotSettings  AuthenticationScreenFlow.csproj.DotSettings  AvatarRendering.Emotes.csproj.DotSettings  CharacterMotion.csproj.DotSettings  Chat.UseCases.Tests.csproj.DotSettings  Chat.csproj.DotSettings  DCL.Analytics.BuildData.csproj.DotSettings  DCL.Analytics.csproj.DotSettings  DCL.AudioStream.PluginWrapper.csproj.DotSettings  DCL.CameraReelStorageService.csproj.DotSettings  DCL.EditMode.Tests.csproj.DotSettings  DCL.Editor.csproj.DotSettings  DCL.Gizmos.csproj.DotSettings  DCL.Input.csproj.DotSettings  DCL.Landscape.csproj.DotSettings  DCL.MediaPlayer.csproj.DotSettings  DCL.MemoryBudget.Editor.csproj.DotSettings  DCL.Multiplayer.Movement.csproj.DotSettings  DCL.Network.csproj.DotSettings  DCL.Optimization.csproj.DotSettings  DCL.PlayMode.Tests.csproj.DotSettings  DCL.Plugins.csproj.DotSettings  DCL.Profiles.csproj.DotSettings  DCL.Quality.csproj.DotSettings  DCL.SDKComponents.csproj.DotSettings  DCL.SharedAPI.csproj.DotSettings  DCL.SkyBox.csproj.DotSettings  DCL.Social.csproj.DotSettings  DCL.Tests.csproj.DotSettings  DCL.Translation.csproj.DotSettings  DCL.UI.GenericContextMenu.Controllers.csproj.DotSettings  DCL.UserInAppInitializationFlow.csproj.DotSettings  DCL.Utilities.csproj.DotSettings  DCL.VideoPlayer.csproj.DotSettings  DCL.WebRequests.csproj.DotSettings  DebugUtilities.csproj.DotSettings  (+34 more)
Explorer/Assets/Plugins/RustSegment/.native/: Cargo.toml  compile_mac.sh  compile_win.bat
Explorer/Assets/Plugins/RustSegment/.native/.cargo/: config.toml
Explorer/Assets/Plugins/RustSegment/.native/src/: cabi.rs  lib.rs  operations.rs  server.rs
Explorer/Assets/Plugins/RustSegment/rust-segment/: Cargo.toml  analyze.sh
Explorer/Assets/Plugins/RustSegment/rust-segment/src/: batcher.rs  cabi.rs  lib.rs  operations.rs  queue_batcher.rs  server.rs
Explorer/Assets/Plugins/TexturesFuse/textures-server/Compressator/: .gitignore  CMakeLists.txt  main.cpp
Explorer/Assets/Plugins/TexturesFuse/textures-server/FreeImage/Source/FFI/: .gitignore  CMakeLists.txt  bitmaps.cpp  bitmaps.h  build.ps1  build.sh  main.cpp  texturesfuse.h
Explorer/Assets/Plugins/TexturesFuse/textures-server/FreeImage/Source/FFI/MemoryHandles/: handles.cpp  handles.h
Explorer/Assets/Plugins/TexturesFuse/textures-server/FreeImage/Source/FFI_Playground/: .gitignore  CMakeLists.txt  build.ps1  build.sh  main.cpp  playground
Explorer/Assets/Plugins/TexturesFuse/textures-server/FuseNode/: CMakeLists.txt  main.cpp
Explorer/Assets/Plugins/TexturesFuse/textures-server/FuseNode/libs/: astcenc-native-shared.lib  texturesfuse.lib
Explorer/textures-server/ProcessHubExample/: CMakeLists.txt  main.cpp
ExplorerAutomationTests/: .gitignore  CODING_STANDARDS.md  ExplorerAutomationTests.csproj  ExplorerAutomationTests.sln  GlobalUsings.cs  README.md
TexturesFuse/: README.md
docs/: README.md  SKILL.md  app-arguments.md  architecture-overview.md  asset-bundles-conversion.md  asset-promises.md  async-programming.md  authoritative-portable-experiences.md  automation-testing.md  avatar-animation-for-demos.md  avatar-rendering.md  branch-and-pr-standards.md  build-and-ci.md  cast.md  chat-emojis.md  chat-history-local-storage.md  chat.md  code-style-guidelines.md  cross-world-ecs-access.md  debug-container-and-widgets.md  development-guide.md  diagnostics.md  directories-and-assemblies-structure.md  disk-cache.md  emotes.md  feature-flags.md  features-registry.md  generic-context-menu.md  getting-started.md  how-to-connect-to-a-local-scene.md  how-to-implement-new-sdk-components.md  incident-management-and-hotfix-policy.md  incident-response.md  ipfs-realms.md  issue-triage-categories.md  landscape.md  livekit-networking.md  locomotion.md  master-of-bots.md  memory-budgeting-and-resource-unloading.md  (+25 more)
scripts/: Generate-ShaderReport.ps1  PERF_REPORT.md  generate-ignore-warnings.sh  generate_perf_report.py  notarize-app.sh  package-lock.json  package.json  perf_report_config.json  requirements-perf-report.txt
skills/: README.md  asset-promise-lifecycle.md  async-programming.md  code-standards.md  diagnostics-and-logging.md  ecs-system-and-component-design.md  feature-flags-and-configuration.md  mvc-and-ui-architecture.md  plugin-architecture.md  sdk-component-implementation.md  web-requests.md
webgl_report/: get_wearable_urns.sh  identify_asset_bundles.sh  report.txt  wearable_urns_report.txt
(+26604 files in other folders)
