[package]
name = "rust-segment"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
segment = { git = "https://github.com/decentraland/segment", branch = "main", default-features = false, features = ["rustls-tls"] }
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full", "parking_lot"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
time = "0.3.36"
anyhow = "1.0.100"

[lib]
crate-type = ["lib", "cdylib"]
